Fixed scroll behaviour on mobile

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -123,7 +123,7 @@
   .login__header {
     position: relative;
   }
-   
-
-
+  html {
+    overscroll-behavior: none;
+  }
 }
